# SuperBudget

./: .gitignore  SuperBudget.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: lint.yaml
examples/: example.ipynb  example.py
funcs/: data_display.py  pdf_extraction.py
src/SuperBudget/: __init__.py  __main__.py  data_display.py  pdf_extraction.py
